@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-04T08:17:44Z",
-  "count_outdated" : 491,
-  "uniques_outdated" : 90,
-  "count" : 538,
-  "uniques" : 99,
+  "timestamp" : "2022-07-04T16:06:15Z",
+  "count_outdated" : 492,
+  "uniques_outdated" : 91,
+  "count" : 539,
+  "uniques" : 100,
   "views" : [
-    {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-22T00:00:00Z",
       "count": 1,
@@ -56,10 +49,10 @@
     },
     {
       "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
