@@ -1,12 +1,7 @@
 {
   "count": 47,
-  "uniques": 7,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-22T00:00:00Z",
       "count": 1,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
