@@ -1,3 +1,10 @@
+2022-07-04T16:06:15Z:
+* notice: last 14d: unq all: 8 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 491 / 99 538
+* notice: next accum: outdated-unq outdated-all / unq all: 91 492 / 100 539
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2022-06-20] / [2022-07-04]
+
 2022-07-04T08:17:44Z:
 * notice: last 14d: unq all: 7 47
 * notice: prev accum: outdated-unq outdated-all / unq all: 90 491 / 98 537
